unpackaged/main/default/objects/Competition__c/Competition__c.object-meta.xml
<CustomObject>
    <description>Junction Object to link Opportunity with a Competitor</description>
    <label>Competition</label>
    <nameField>
        <displayFormat>C - {0000}</displayFormat>
        <label>Competition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>