unpackaged/main/default/objects/Competition__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Competitor__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Competitor__c.Country_Text__c</field>
            <operation>contains</operation>
            <valueField>$User.Country</valueField>
        </filterItems>
        <filterItems>
            <field>Competitor__c.Division_Text__c</field>
            <operation>contains</operation>
            <valueField>$User.BDG_Division__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Competition</relationshipLabel>
    <relationshipName>Competition</relationshipName>
    <type>Lookup</type>
</CustomField>