unpackaged/main/default/objects/Competition__c/fields/Lost_to__c.field-meta.xml
<CustomField>
    <fullName>Lost_to__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lost to</label>
    <type>Checkbox</type>
</CustomField>